@@ -60,7 +60,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rapi.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -86,7 +85,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="mkdir dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y &quot;$(TargetPath)&quot; dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y README.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y CHANGELOG.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\condor2nav.ini dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\GliderData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y data\SceneryData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;xcopy /D /I /Y data\XCSoar\Waypoints dist\$(ConfigurationName)\condor2nav\data\Waypoints"
+				CommandLine="mkdir dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y &quot;$(TargetPath)&quot; dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y README.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y CHANGELOG.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\condor2nav.ini dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\GliderData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y data\SceneryData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;xcopy /D /I /Y data\XCSoar\Waypoints dist\$(ConfigurationName)\condor2nav\data\Waypoints&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -134,7 +133,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rapi.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -162,7 +160,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="mkdir dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y &quot;$(TargetPath)&quot; dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y README.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y CHANGELOG.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\condor2nav.ini dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\GliderData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y data\SceneryData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;xcopy /D /I /Y data\XCSoar\Waypoints dist\$(ConfigurationName)\condor2nav\data\Waypoints"
+				CommandLine="mkdir dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y &quot;$(TargetPath)&quot; dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y README.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y CHANGELOG.txt dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\condor2nav.ini dist\$(ConfigurationName)\condor2nav&#x0D;&#x0A;copy /Y data\GliderData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;copy /Y data\SceneryData.csv dist\$(ConfigurationName)\condor2nav\data&#x0D;&#x0A;xcopy /D /I /Y data\XCSoar\Waypoints dist\$(ConfigurationName)\condor2nav\data\Waypoints&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
